# merge-whitespace-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
bins/demo/: Cargo.toml
bins/demo/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  macro_input.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: merge_whitespace.rs
