[package]
name = "merge-whitespace"
version = "0.2.0-unstable"
description = "Procedural macros for merging whitespace in const contexts"
homepage = "https://github.com/sunsided/merge-whitespace-rs"
repository = "https://github.com/sunsided/merge-whitespace-rs"
authors = ["Markus Mayer"]
edition = "2021"
license = "EUPL-1.2"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["procedural-macro", "whitespaces", "graphql"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.63"

[lib]
proc-macro = true
