[package]
name = "merge-whitespace"
version = "1.0.0"
description = "Procedural macros for merging whitespace in const contexts"
homepage = "https://github.com/sunsided/merge-whitespace-rs"
repository = "https://github.com/sunsided/merge-whitespace-rs"
authors = ["Markus Mayer"]
edition = "2021"
license = "EUPL-1.2"
readme = "../../README.md"
categories = ["development-tools", "text-processing"]
keywords = ["procedural-macro", "whitespaces", "graphql"]

[dependencies]
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.87"

[lib]
proc-macro = true
