[package]
name = "merge-whitespace"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
quote = "1.0.37"
syn = "2.0.93"
merge-whitespace-utils = { path = "../utils", version = "1.1.0" }

[lib]
proc-macro = true

